<h5>2.0 RC 1         [2019-01-29]</h5>
<hr>
- converted 'cleanVars' to \Xmf\Request (mamba)
- converted $_REQUEST to \Xmf\Request (mamba)
- cleaned up english and german language files (goffy)
- transformed preference mimetypes from text to array (goffy, mage)
- activated file '/class/pagenav.php' (goffy)
- fixed bug in admin/downloads.php: date of submitting was not set in case of new submit (goffy)
- added show error when file size exceed maxuploadsize (goffy)
- removed double entries for modversion/hasMain and hasSearch (goffy)
- usage of same smarty names (error/form) (goffy)
- added class for error message to styles.css (goffy)
- fixed bug for checking category (goffy)
- transformed preference maxuploadsize from text to array (goffy)
- fixed bug block editing (goffy)
- usage of smarty names message_erreur/themeForm to have compatibility with existing themes (goffy)
- adopted modfile.tpl (caused error if used together with blocks) (goffy)
- skip captcha for xoopsUsers (members are skipped in class/download.php getForm)  (goffy)
- modified preference maxuploadsize(goffy/mage)
- implemented perm_autoapprove also for modifying on user side (goffy/mage)
- added description to preference maxuploadsize (goffy/mage)
- rebuild file list in search.php (goffy/mage)
- added check for latest version on GitHub (mamba/mage)
- Added an automatic size system for downloads. (mage)
- corrected typing errors (goffy)
- modified block option "blockstyle" (goffy)

<h5>2.0 Alpha 1         [2019-01-05]</h5>
<hr>
- moved functions to Utility class (mamba)
- started with conversion to Xmf\Request (mamba)
- made check for upload folders easier (mamba)
- some cosmetic changes related to PSR-2 (mamba)
- shorten class names (mamba)
- added Preloads with autoloader (geekwright/mamba)
- namespaces (mamba)
- class autoloading (mamba)
- short array syntax (mamba)
- Yoda notation (mamba)
- #HEX representation (mamba)
- started conversion to XMF (mamba)