@@ -1,0 +1,3 @@
+<div class="tdmdownloads-block">
+    <{$block.form}>
+</div>
