@@ -1,0 +1,31 @@
+        <div class="item tdmdownloads-blockitem">
+            <div class="itemHead">
+            <span class="itemTitle">
+                <h2><a title="<{$downloads.title}>" href="<{$xoops_url}>/modules/tdmdownloads/singlefile.php?lid=<{$downloads.lid}>" rel="directory"><{$downloads.title}></a></h2>
+            </span>
+            </div>
+            <{if $downloads.inforation}>
+                <div class="itemInfo">
+                    <span class="itemPoster"><{$smarty.const._MB_TDMDOWNLOADS_SUBMITDATE}><{$downloads.date}></span>
+                    <span class="itemPostDate"><{$smarty.const._MB_TDMDOWNLOADS_SUBMITTER}><{$downloads.submitter}></span>
+                    <span class="itemReting"><{$smarty.const._MB_TDMDOWNLOADS_REATING}><{$downloads.rating}></span>
+                    <span class="itemHits"><{$smarty.const._MB_TDMDOWNLOADS_HITS}><{$downloads.hits}></span>
+                </div>
+            <{/if}>
+            <{if $downloads.logourl || $downloads.description}>
+                <div class="itemBody">
+                    <div class="itemText justify">
+                        <{if $downloads.logourl != ""}>
+                            <img class="<{$downloads.logourl_class}>" width="<{$downloads.logourl_width}>" src="<{$downloads.logourl}>" alt="<{$downloads.title}>">
+                        <{/if}>
+                        <{if $downloads.description != ""}>
+                            <{$downloads.description}>
+                            <p class="itemPermaLink">
+                                <a class="btn btn-default" href="<{$xoops_url}>/modules/tdmdownloads/singlefile.php?cid=<{$downloads.cid}>&amp;lid=<{$downloads.lid}>" title='<{$smarty.const._MD_TDMDOWNLOADS_MOREDETAILS}>' target='_blank'><{$smarty.const._MD_TDMDOWNLOADS_MOREDETAILS}></a>                   
+                            </p>
+                        <{/if}>
+                    </div>
+                    <div class="endline"></div>
+                </div>
+            <{/if}>
+        </div>
