@@ -1,3 +1,9 @@
+<h5></h5>
+<hr>
+- added hits and ratings and for output of download in index.php (goffy)
+- added number of subcategories for output of category in index.php (goffy)
+- added new lang vars (goffy)
+
 <h5>2.0 RC 1         [2019-01-29]</h5>
 <hr>
 - converted 'cleanVars' to \Xmf\Request (mamba)
